src/objects/Ven_Vertrag_SevenVentures__c.object
<CustomObject>
    <description>Vertragsobjekt für SevenVentures Verträge</description>
    <fields>
        <fullName>Comment_Valuation_Parameters__c</fullName>
        <label>Comment (Valuation Parameters)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Media_Shifting_P7S1__c</fullName>
        <defaultValue>&quot;Beschreibung des Schieberechts von P7S1“) - Beschreibung des Schieberechts von P7S1&quot;</defaultValue>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Beschreibung des Schieberechts von P7S1“) - Beschreibung des Schieberechts von P7S1</description>
        <inlineHelpText>Beschreibung des Schieberechts von P7S1“) - Beschreibung des Schieberechts von P7S1</inlineHelpText>
        <label>Media Shifting P7S1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_GMV_Commitment_SevenVentures__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Vertragsfeld für SevenVentures.</description>
        <label>Monthly GMV Commitment (SevenVentures)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <description>Die Angaben werden für die Vertragserstellung von Seven Ventures benötigt.</description>
        <inlineHelpText>Bitte den Service Level auswählen.</inlineHelpText>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze (&lt;20% MG)</fullName>
                </value>
                <value>
                    <fullName>Silber (20-24% MG oder Media Investment)</fullName>
                </value>
                <value>
                    <fullName>Gold (25-30% MG oder strategischer Deal)</fullName>
                </value>
                <value>
                    <fullName>Platin (&gt;=30% MG oder strat. Prio-Deal)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_AccountOwner7V__c</fullName>
        <description>Wird mit der E-Mail Adresse des Account Inhabers befüllt, soweit dieser Mitarbeiter von 7V ist</description>
        <inlineHelpText>Wird mit der E-Mail Adresse des Account Inhabers befüllt, soweit dieser Mitarbeiter von 7V ist</inlineHelpText>
        <label>Account-Owner (if 7V)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ven_Additional_Information__c</fullName>
        <defaultValue>&quot;Besonderheiten&quot;</defaultValue>
        <description>Vertragsfeld für SevenVentures</description>
        <inlineHelpText>Besonderheiten bitte hier eintragen!</inlineHelpText>
        <label>Additional Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Bemerkung_zu_den_Bewertungsparameter__c</fullName>
        <description>Es handelt sich um ein Bemerkungsfeld für das Feld &quot;Bewertungsparameter&quot; von Seven Ventures.</description>
        <inlineHelpText>Hier bitte Bemerkungen zu dem Feld &quot;Bewertungsparameter&quot; eintragen.</inlineHelpText>
        <label>Bemerkung zu den Bewertungsparametern</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Bemerkung_zu_den_Informationspflich__c</fullName>
        <defaultValue>&quot;Besonderheiten&quot;</defaultValue>
        <description>Bemerkungsfeld für das Feld &quot;Informationspflichten&quot; von Seven Ventures.</description>
        <inlineHelpText>Hier bitte Bemerkungen zu dem Feld &quot;Informationspflichten&quot; eintragen.</inlineHelpText>
        <label>Comment (Information Requirements)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Bemerkung_zum_Schlusstermin__c</fullName>
        <description>Es handelt sich um ein Bemerkungsfeld zum Feld Schlusstermin der für Beteiligungsverträge von Seven Ventures  benötigt wird.</description>
        <inlineHelpText>Hier bitte Bemerkungen zum Schlusstermin eintragen.</inlineHelpText>
        <label>Comment (Closing Date)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Bemerkung_zur_Beteiligungsh_he__c</fullName>
        <description>Es handelt sich um ein Bemerkungsfeld für das Feld &quot;Beteiligungshöhe&quot; von Seven Ventures.</description>
        <inlineHelpText>Hier bitte Bemerkungen zu dem Feld &quot;Beteiligungshöhe&quot; eintragen.</inlineHelpText>
        <label>Comment (Equity Participation)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Bemerkung_zur_Gesellschafterstruktur__c</fullName>
        <description>Bemerkungsfeld zur Gesellschafterstruktur der für Beteiligungsverträge von Seven Ventures  benötigt wird.</description>
        <inlineHelpText>Hier bitte Bemerkungen zu dem Feld &quot;Gesellschafterstruktur&quot; eintragen.</inlineHelpText>
        <label>Comment (Shareholder Structure)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Bemerkung_zur_Minimumbeteiligung__c</fullName>
        <description>Bemerkungsfeld für das Feld &quot;Minimumbeteiligung&quot; von Seven Ventures.</description>
        <inlineHelpText>Hier bitte Bemerkungen zu dem Feld &quot;Minimumbeteiligung&quot; eintragen.</inlineHelpText>
        <label>Comment (Minimum Participation)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Beschreibung_zum_GMV__c</fullName>
        <description>Es werden GMV Informationen zu diesem Seven Venturas Vertrag erfasst.</description>
        <inlineHelpText>Bitte GMV Informationen eintragen.</inlineHelpText>
        <label>Beschreibung zum GMV</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Beschreibung_zur_F_lligkeit__c</fullName>
        <description>Hier werden Informationen zur Fälligkeit der Seven Ventures Verträge eingetragen.</description>
        <inlineHelpText>Bitte Informationen zur Fälligkeit eintragen.</inlineHelpText>
        <label>Beschreibung zur Fälligkeit</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Beschreibung_zur_Nachlaufphase__c</fullName>
        <defaultValue>&quot;Beschreibung einer Nachlaufphase nach Kampagnen- / oder Vertragsende&quot;</defaultValue>
        <description>Beschreibung einer Nachlaufphase nach Kampagnen- / oder Vertragsende</description>
        <inlineHelpText>Beschreibung einer Nachlaufphase nach Kampagnen- / oder Vertragsende</inlineHelpText>
        <label>Deferred Participation</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Beschreibung_zur_festen_Verg_tung__c</fullName>
        <description>Hier werden Informationen zur festen Vergütung für Seven Ventures Verträge eingetragen.</description>
        <inlineHelpText>Bitte Informationen zur festen Vergütung (Minimumgarantie) eintragen.</inlineHelpText>
        <label>Beschreibung zur festen Vergütung</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Beschreibung_zur_variablen_Verg_tung__c</fullName>
        <defaultValue>&quot;Beschreibung – leistungsabhängige Vergütung&quot;</defaultValue>
        <description>Beschreibung – leistungsabhängige Vergütung</description>
        <inlineHelpText>Beschreibung – leistungsabhängige Vergütung</inlineHelpText>
        <label>Variable Proceeds (%)</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Beteiligung__c</fullName>
        <defaultValue>false</defaultValue>
        <description>gibt an, ob eine zusätzliche Beteiligungskomponente zu dem Medialeistungsvertrag existiert. Die Auswahl beeinflusst die Standard Terms</description>
        <inlineHelpText>gibt an, ob eine zusätzliche Beteiligungskomponente zu dem Medialeistungsvertrag existiert. Die Auswahl beeinflusst die Standard Terms</inlineHelpText>
        <label>Beteiligung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Beteiligunhgsh_he__c</fullName>
        <defaultValue>&quot;Beteiligungshöhe&quot;</defaultValue>
        <description>Feld in dem die Beteiligungshöhe von Seven Ventures bei Beteiligungsverträge angegeben wird.</description>
        <inlineHelpText>Bitte die Beteiligungshöhe eintragen!</inlineHelpText>
        <label>7V Equity Share</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Bewertungsparameter__c</fullName>
        <description>Es handelt sich um ein Feld in dem Bewertungsparameter von Seven Ventures bei Beteiligungsverträge angegeben wird.</description>
        <inlineHelpText>Bitte Bewertungsparameter eintragen!</inlineHelpText>
        <label>Bewertungsparameter</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_ChannelShare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Channel_Share__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Einhaltung der Senderschiene auf Jahres-/Monatsbasis</description>
        <inlineHelpText>Einhaltung der Senderschiene auf Jahres-/Monatsbasis</inlineHelpText>
        <label>Channel Share (Period)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Comment_Additional_Information__c</fullName>
        <description>Feld für Seven Ventures.</description>
        <label>Comment (Additional Information)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Comment_Ownership_Interest__c</fullName>
        <defaultValue>&quot;Bewertungsparameter - Multiple (wovon, in welcher Höhe, zu welchem Zeitpunkt)&quot;</defaultValue>
        <description>Bewertungsparameter - Multiple (wovon, in welcher Höhe, zu welchem Zeitpunkt)</description>
        <inlineHelpText>Bewertungsparameter - Multiple (wovon, in welcher Höhe, zu welchem Zeitpunkt)</inlineHelpText>
        <label>Comment (Ownership Interest)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Contract_End__c</fullName>
        <description>Das Vertragsende (Datum) wird hier erfasst.</description>
        <inlineHelpText>Das Vertragsende (Datum) wird hier erfasst.</inlineHelpText>
        <label>Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ven_Contract_Start__c</fullName>
        <description>Der Vertragsstart (Datum) wird hier erfasst.</description>
        <inlineHelpText>Der Vertragsstart (Datum) wird hier erfasst.</inlineHelpText>
        <label>Contract Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ven_Contract_Status__c</fullName>
        <description>Der Vertragsstatus wird hiermit erfasst.</description>
        <inlineHelpText>Der Vertragsstatus wird hiermit erfasst.</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Contract_Termination_Compensation__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Vertragsfeld für SevenVentures.</description>
        <label>Contract Termination - Compensation</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Contract_Termination_Customer__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Vertragsfeld für SevenVentures.</description>
        <inlineHelpText>Kündigungsrechte des Vertragspartners</inlineHelpText>
        <label>Contract Termination (Customer)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_DaypartShare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daypart Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Daypart_Share__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Einhaltung der Zeitschiene auf Jahres-/Monatsbasis</description>
        <inlineHelpText>Einhaltung der Zeitschiene auf Jahres-/Monatsbasis</inlineHelpText>
        <label>Daypart Share (Period)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ven_DealStructureOther__c</fullName>
        <label>Deal Structure Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_DealStructure__c</fullName>
        <label>Deal Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MG only</fullName>
                </value>
                <value>
                    <fullName>MG+RevShare</fullName>
                </value>
                <value>
                    <fullName>MG+EP Light</fullName>
                </value>
                <value>
                    <fullName>MG+EP</fullName>
                </value>
                <value>
                    <fullName>MG+RevShare+EP</fullName>
                </value>
                <value>
                    <fullName>MG+EK</fullName>
                </value>
                <value>
                    <fullName>Equity only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Deal_Type__c</fullName>
        <description>Hiermit wird die Vertragsart definiert.</description>
        <inlineHelpText>Hiermit wird die Vertragsart definiert.</inlineHelpText>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medialeistungsvertrag (inkl. EP Light)</fullName>
                </value>
                <value>
                    <fullName>Call Option</fullName>
                </value>
                <value>
                    <fullName>Exit-Participation</fullName>
                </value>
                <value>
                    <fullName>Direct Equity (minority)</fullName>
                </value>
                <value>
                    <fullName>Direct Equity (majority)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Duration__c</fullName>
        <description>Hier wir die Laufzeit des Vertrags automatisch berechnet.</description>
        <formula>((Ven_Contract_End__c - Ven_Contract_Start__c) /30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hier wir die Laufzeit des Vertrags automatisch berechnet (in Monate).
Wenn ein Vertrag ab dem zweiten Monat länger als 15 Tage läuft, wird dieser als ein voller Monat gerechnet!</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_GMV_Distribution__c</fullName>
        <defaultValue>&quot;Beschreibung - Verteilung des Bruttomediavolumens (BMV) über die Vertragslaufzeit&quot;</defaultValue>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Verteilung des Bruttomediavolumens (BMV) über die Vertragslaufzeit</description>
        <inlineHelpText>Beschreibung - Verteilung des Bruttomediavolumens (BMV) über die Vertragslaufzeit</inlineHelpText>
        <label>GMV Distribution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_GMV_Informationen__c</fullName>
        <description>Es werden GMV Informationen zu diesem Seven Venturas Vertrag erfasst.</description>
        <inlineHelpText>Bitte GMV Informationen eintragen.</inlineHelpText>
        <label>GMV Informationen</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Gesellschafterstruktur__c</fullName>
        <defaultValue>&quot;Gesellschafterstruktur&quot;</defaultValue>
        <description>Es handelt sich um ein Feld in dem die Gesellschafterstruktur in dem von Seven Ventures beteiligtem Unternehmen angegeben wird.</description>
        <inlineHelpText>Bitte hier die Gesellschafterstruktur angeben!</inlineHelpText>
        <label>Shareholder Structure</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_GmvYear1__c</fullName>
        <description>Use full number</description>
        <inlineHelpText>Use full number</inlineHelpText>
        <label>GMV Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_GmvYear2__c</fullName>
        <description>Use full number</description>
        <inlineHelpText>Use full number</inlineHelpText>
        <label>GMV Year 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_GmvYear3__c</fullName>
        <description>Use full number</description>
        <inlineHelpText>Use full number</inlineHelpText>
        <label>GMV Year 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_Historische_Daten__c</fullName>
        <description>Zusammenfassung von Daten aus Theorem Analytics, die nach der Migration nicht mehr benötigt werden.</description>
        <inlineHelpText>Zusammenfassung von Daten aus Theorem Analytics, die nach der Migration nicht mehr benötigt werden.</inlineHelpText>
        <label>Historische Daten</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Informationspflichten__c</fullName>
        <defaultValue>&quot;Informationspflichten&quot;</defaultValue>
        <description>Es handelt sich um ein Feld in dem die Informationspflichten von Seven Ventures bei Beteiligungsverträge angegeben wird.</description>
        <inlineHelpText>Bitte die Informationspflichten hier angeben!</inlineHelpText>
        <label>Information Requirements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Invoicing_MG_Commitment__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Vertragsfeld für SevenVentures.</description>
        <label>Invoicing MG - Commitment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Invoicing_MG_Due_Date__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Vertragsfeld für SevenVentures.</description>
        <label>Invoicing MG - Due Date</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Invoicing_Revenue_Commitment__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Vertragsfeld für SevenVentures.</description>
        <label>Invoicing Revenue - Commitment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Invoicing_Revenue_Due_Date__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Vertragsfeld für SevenVentures.</description>
        <label>Invoicing Revenue - Due Date</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Invoicing__c</fullName>
        <defaultValue>&quot;Broadcasting Media&quot;</defaultValue>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Vertragsfeld für SevenVentures.</description>
        <label>Invoicing</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Kombination_mit_Beteiligung__c</fullName>
        <defaultValue>false</defaultValue>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Angaben für den Vertragsentwurf der Seven Ventures</description>
        <inlineHelpText>Bitte angeben ob eine Beteiligung beim Kunden besteht!</inlineHelpText>
        <label>Additional Equity or equity-like Comp.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Kooperationsinformationen__c</fullName>
        <description>Hier werden Kooperationsinformationen zu einem Vertrag von Seven Ventures erfasst.</description>
        <inlineHelpText>Hier bitte ggf. Kooperations-Informationen eintragen.</inlineHelpText>
        <label>Kooperationsinformationen</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_LegalOwner__c</fullName>
        <label>Legal Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_Legal_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Nachschlagen auf SevenVentures Kontakte mit Rolle = &quot;Legal&quot;</description>
        <inlineHelpText>Nachschlagen auf SevenVentures Kontakte mit Rolle = &quot;Legal&quot;</inlineHelpText>
        <label>Legal Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.AccountNumber</field>
                <operation>equals</operation>
                <value>2504979171</value>
            </filterItems>
            <filterItems>
                <field>Contact.Ven_Rolle__c</field>
                <operation>equals</operation>
                <value>Legal</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Verträge</relationshipLabel>
        <relationshipName>Vertr_ge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ven_Legal_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Nachschlagebeziehung zu einen Benutzer der als Legal Owner des Vertrages definiert wird!</description>
        <inlineHelpText>Nachschlagebeziehung zu einen Benutzer der als Legal Owner des Vertrages definiert wird!</inlineHelpText>
        <label>Legal Owner old</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vertrag</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ven_MediaAndAnalyticsOwner__c</fullName>
        <label>Media &amp; Analytics Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_MediaShiftingCustomerAnnually__c</fullName>
        <label>Media Shifting Customer (Annually)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_MediaShiftingCustomerMonthly__c</fullName>
        <label>Media Shifting Customer (Monthly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_MediaShiftingSevenVenturesAnnually__c</fullName>
        <label>Media Shifting SevenVentures (Annually)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_MediaShiftingSevenVenturesMonthly__c</fullName>
        <label>Media Shifting SevenVentures (Monthly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Media_Shifting_Customer__c</fullName>
        <defaultValue>&quot;Beschreibung des Schieberechts des Kunden&quot;</defaultValue>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Beschreibung des Schieberechts des Kunden</description>
        <inlineHelpText>Beschreibung des Schieberechts des Kunden</inlineHelpText>
        <label>Media Shifting Customer</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_MinimumGuaranteeComment__c</fullName>
        <label>Comment (belongs to Minimum Guarantee)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Minimum_Guarantee__c</fullName>
        <description>Aufteilung der Minimumgarantie über die Vertragslaufzeit</description>
        <inlineHelpText>Aufteilung der Minimumgarantie über die Vertragslaufzeit</inlineHelpText>
        <label>Minimum Guarantee (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Minimumbeteiligung__c</fullName>
        <defaultValue>&quot;Minimumbeteiligung&quot;</defaultValue>
        <description>Es handelt sich um ein Feld in dem die Minimumbeteiligung von Seven Ventures bei Beteiligungsverträge angegeben wird.</description>
        <inlineHelpText>Bitte eine Minimumbeteiligung angeben!</inlineHelpText>
        <label>Minimum Participation</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Monthly_GMV_Commitment_Customer__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Monthly GMV Commitment</description>
        <label>Monthly GMV Commitment (Customer)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Monthly_Planning__c</fullName>
        <defaultValue>&quot;Vertragliche Information zur Monatsplanung&quot;</defaultValue>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Vertragliche Information zur Monatsplanung</description>
        <inlineHelpText>Vertragliche Information zur Monatsplanung</inlineHelpText>
        <label>Monthly Planning</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Opportunity__c</fullName>
        <description>Verknüpfung des Vertrages mit einer Opportunity.</description>
        <inlineHelpText>Mit diesem Feld wird die Verknüpfung der Vertrages mit eine Opportunity hergestellt.</inlineHelpText>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Verträge</relationshipLabel>
        <relationshipName>Vertr_ge_Sevenventures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ven_OptionalGmvVolumeComment__c</fullName>
        <label>Comment (belongs to Optional GMV Volume)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_OptionalGmvVolume__c</fullName>
        <label>Optional GMV Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_OptionalGmvYear1__c</fullName>
        <description>Use full number</description>
        <inlineHelpText>Use full number</inlineHelpText>
        <label>Optional GMV Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_OptionalGmvYear2__c</fullName>
        <description>Use full number</description>
        <inlineHelpText>Use full number</inlineHelpText>
        <label>Optional GMV Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_OptionalGmvYear3__c</fullName>
        <description>Use full number</description>
        <inlineHelpText>Use full number</inlineHelpText>
        <label>Optional GMV Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_OtherDeviations__c</fullName>
        <label>Other deviations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_OtherShares__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Shares</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Post_Contract_Participation__c</fullName>
        <description>Informationen zum Vertrag von Seven Ventures.</description>
        <inlineHelpText>Informationen zum Vertrag von Seven Ventures.</inlineHelpText>
        <label>Post Contract Participation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Pr_ambel__c</fullName>
        <defaultValue>&quot;Beispiel - Die CompanyX GmbH ist ein Online-Versandhändler in den Bereichen X und Y im deutschsprachigen Raum&quot;</defaultValue>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Präambel für einen Vertrag von SevenVentures.</description>
        <inlineHelpText>Bitte das Textfeld ausfüllen!</inlineHelpText>
        <label>Preamble</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_PrapYieldComment__c</fullName>
        <label>Comment (belongs to PRAP Yield)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_PrapYield__c</fullName>
        <label>PRAP Yield (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Produkte_und_Kooperation__c</fullName>
        <defaultValue>&quot;Beispiel – SevenVentures ist an allen unter der Marke ComX verkauften Prdoukte beteiligt. Bei ComX handelt es sich um...&quot;</defaultValue>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Hier werden die Produkte und die Kooperationsart in der Seven Ventures involviert ist beschrieben.</description>
        <inlineHelpText>Bitte die Produkte und die Kooperationsart beschreiben in der Seven Ventures involviert ist.</inlineHelpText>
        <label>Product and Cooperation</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Reminder__c</fullName>
        <description>Berechnet das Datum für den Reminder in Abhängigkeit von der Vertragsdauer</description>
        <formula>IF (ISBLANK(Ven_Deadline__c) ,  Ven_Contract_End__c  , Ven_Deadline__c) - IF(Ven_Duration__c &lt; 6, 60, 90)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Berechnet das Datum für den Reminder in Abhängigkeit von der Vertragsdauer</inlineHelpText>
        <label>Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ven_Royalty_Report__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Vertragsfeld für SevenVentures.</description>
        <label>Royalty Report</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Schlusstermin__c</fullName>
        <description>Es handelt sich um einen Schlusstermin der für Beteiligungsverträge von Seven Ventures  benötigt wird.</description>
        <inlineHelpText>Bitte einen Schlusstermin eintragen!</inlineHelpText>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ven_Scope__c</fullName>
        <defaultValue>&quot;Geographische Region z.B. DACH-Region&quot;</defaultValue>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Geographische Region z.B. DACH-Region</description>
        <inlineHelpText>Geographische Region z.B. DACH-Region</inlineHelpText>
        <label>Scope</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_SevenContractsId__c</fullName>
        <label>SevenContracts ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_TotalOptionalGmv__c</fullName>
        <description>Sum of Optional GMV Year 1 to 3</description>
        <formula>Ven_OptionalGmvYear1__c +  Ven_OptionalGmvYear2__c  +  Ven_OptionalGmvYear3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Optional GMV Year 1 to 3</inlineHelpText>
        <label>Total Optional GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>